fix: fix title word wrap

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -95,7 +95,7 @@ html[data-theme='dark'] .dark-inverted {
   align-items: baseline;
   flex-wrap: wrap;
   gap: var(--nav-link-spacing-horizontal);
-  word-break: break-all;
+
 }
 
 .posts-list-pagination-button {
